--- a/Arvika_gielda.mw
+++ b/Arvika_gielda.mw
@@ -3,6 +3,8 @@
 
 {{Värmlándda leana gielddat}}
 
+[[Category:Värmlándda leatna]]
+
 [[de:Arvika (Gemeinde)]]
 [[en:Arvika Municipality]]
 [[fo:Arvika kommuna]]
