--- a/Eda_gielda.mw
+++ b/Eda_gielda.mw
@@ -3,6 +3,8 @@
 
 {{Värmlándda leana gielddat}}
 
+[[Category:Värmlándda leatna]]
+
 [[da:Eda kommun]]
 [[de:Eda (Gemeinde)]]
 [[en:Eda Municipality]]
