--- a/Filipstad_gielda.mw
+++ b/Filipstad_gielda.mw
@@ -3,6 +3,8 @@
 
 {{Värmlándda leana gielddat}}
 
+[[Category:Värmlándda leatna]]
+
 [[da:Filipstads kommun]]
 [[de:Filipstad (Gemeinde)]]
 [[en:Filipstad Municipality]]
