--- a/Forshaga_gielda.mw
+++ b/Forshaga_gielda.mw
@@ -3,6 +3,8 @@
 
 {{Värmlándda leana gielddat}}
 
+[[Category:Värmlándda leatna]]
+
 [[de:Forshaga (Gemeinde)]]
 [[en:Forshaga Municipality]]
 [[fr:Commune de Forshaga]]
