--- a/Grums_gielda.mw
+++ b/Grums_gielda.mw
@@ -3,6 +3,8 @@
 
 {{Värmlándda leana gielddat}}
 
+[[Category:Värmlándda leatna]]
+
 [[da:Grums kommun]]
 [[de:Grums (Gemeinde)]]
 [[en:Grums Municipality]]
