--- a/Hagfors_gielda.mw
+++ b/Hagfors_gielda.mw
@@ -3,6 +3,8 @@
 
 {{Värmlándda leana gielddat}}
 
+[[Category:Värmlándda leatna]]
+
 [[de:Hagfors (Gemeinde)]]
 [[en:Hagfors Municipality]]
 [[fo:Hagfors kommuna]]
