--- a/Karlstad_gielda.mw
+++ b/Karlstad_gielda.mw
@@ -3,6 +3,8 @@
 
 {{Värmlándda leana gielddat}}
 
+[[Category:Värmlándda leatna]]
+
 [[de:Karlstad (Gemeinde)]]
 [[en:Karlstad Municipality]]
 [[es:Karlstad]]
