--- a/Kil_gielda.mw
+++ b/Kil_gielda.mw
@@ -3,6 +3,8 @@
 
 {{Värmlándda leana gielddat}}
 
+[[Category:Värmlándda leatna]]
+
 [[da:Kils kommun]]
 [[de:Kil (Gemeinde)]]
 [[en:Kil Municipality]]
