--- a/Kristinehamn_gielda.mw
+++ b/Kristinehamn_gielda.mw
@@ -3,6 +3,8 @@
 
 {{Värmlándda leana gielddat}}
 
+[[Category:Värmlándda leatna]]
+
 [[da:Kristinehamns kommun]]
 [[de:Kristinehamn (Gemeinde)]]
 [[en:Kristinehamn Municipality]]
