--- a/Munkfors_gielda.mw
+++ b/Munkfors_gielda.mw
@@ -3,6 +3,8 @@
 
 {{Värmlándda leana gielddat}}
 
+[[Category:Värmlándda leatna]]
+
 [[de:Munkfors (Gemeinde)]]
 [[en:Munkfors Municipality]]
 [[fr:Commune de Munkfors]]
