--- a/Storfors_gielda.mw
+++ b/Storfors_gielda.mw
@@ -3,6 +3,8 @@
 
 {{Värmlándda leana gielddat}}
 
+[[Category:Värmlándda leatna]]
+
 [[da:Storfors kommun]]
 [[de:Storfors (Gemeinde)]]
 [[en:Storfors Municipality]]
