--- a/Sunne_gielda.mw
+++ b/Sunne_gielda.mw
@@ -3,6 +3,8 @@
 
 {{Värmlándda leana gielddat}}
 
+[[Category:Värmlándda leatna]]
+
 [[da:Sunne kommun]]
 [[de:Sunne (Gemeinde)]]
 [[en:Sunne Municipality]]
