--- a/Säffle_gielda.mw
+++ b/Säffle_gielda.mw
@@ -3,6 +3,8 @@
 
 {{Värmlándda leana gielddat}}
 
+[[Category:Värmlándda leatna]]
+
 [[da:Säffle kommun]]
 [[de:Säffle (Gemeinde)]]
 [[en:Säffle Municipality]]
