--- a/Torsby_gielda.mw
+++ b/Torsby_gielda.mw
@@ -3,6 +3,8 @@
 
 {{Värmlándda leana gielddat}}
 
+[[Category:Värmlándda leatna]]
+
 [[da:Torsby kommun]]
 [[de:Torsby (Gemeinde)]]
 [[en:Torsby Municipality]]
