--- a/Årjäng_gielda.mw
+++ b/Årjäng_gielda.mw
@@ -3,6 +3,8 @@
 
 {{Värmlándda leana gielddat}}
 
+[[Category:Värmlándda leatna]]
+
 [[de:Årjäng (Gemeinde)]]
 [[en:Årjäng Municipality]]
 [[fo:Årjängs kommuna]]
