--- a/Värmlándda_leatna.mw
+++ b/Värmlándda_leatna.mw
@@ -3,7 +3,7 @@
 {{Värmlándda leana gielddat}}
 {{Ruoŧa leanat}}
  
-[[Category:Ruoŧŧa]]
+[[Category:Värmlándda leatna]]
 
 [[bs:Värmlands län]]
 [[ca:Comtat de Värmland]]
