--- a/Oarje-Götalándda_leatna.mw
+++ b/Oarje-Götalándda_leatna.mw
@@ -4,7 +4,7 @@
  
 {{Ruoŧa leanat}}
  
-[[Category:Ruoŧŧa]]
+[[Category:Oarje-Götalándda leatna]]
 
 [[bs:Västra Götalands län]]
 [[ca:Comtat de Västra Götaland]]
