--- a/Ale_gielda.mw
+++ b/Ale_gielda.mw
@@ -3,6 +3,8 @@
 
 {{Oarje-Götalándda leatna}}
 
+[[Category:Oarje-Götalándda leatna]]
+
 [[da:Ale kommun]]
 [[de:Ale (Gemeinde)]]
 [[en:Ale Municipality]]
