--- a/Alingsåsa_gielda.mw
+++ b/Alingsåsa_gielda.mw
@@ -3,6 +3,8 @@
 
 {{Oarje-Götalándda leatna}}
 
+[[Category:Oarje-Götalándda leatna]]
+
 [[de:Alingsås (Gemeinde)]]
 [[en:Alingsås Municipality]]
 [[fo:Alingsås kommuna]]
