--- a/Bengtsforsa_gielda.mw
+++ b/Bengtsforsa_gielda.mw
@@ -3,6 +3,8 @@
 
 {{Oarje-Götalándda leatna}}
 
+[[Category:Oarje-Götalándda leatna]]
+
 [[de:Bengtsfors (Gemeinde)]]
 [[en:Bengtsfors Municipality]]
 [[fi:Bengtsforsin kunta]]
