--- a/Bollebygda_gielda.mw
+++ b/Bollebygda_gielda.mw
@@ -3,6 +3,8 @@
 
 {{Oarje-Götalándda leatna}}
 
+[[Category:Oarje-Götalándda leatna]]
+
 [[de:Bollebygd (Gemeinde)]]
 [[en:Bollebygd Municipality]]
 [[fi:Bollebygdin kunta]]
