--- a/Boråsa_gielda.mw
+++ b/Boråsa_gielda.mw
@@ -3,6 +3,8 @@
 
 {{Oarje-Götalándda leatna}}
 
+[[Category:Oarje-Götalándda leatna]]
+
 [[de:Borås (Gemeinde)]]
 [[en:Borås Municipality]]
 [[eo:Borås]]
