--- a/Dals-Eda_gielda.mw
+++ b/Dals-Eda_gielda.mw
@@ -3,6 +3,8 @@
 
 {{Oarje-Götalándda leatna}}
 
+[[Category:Oarje-Götalándda leatna]]
+
 [[de:Dals-Ed (Gemeinde)]]
 [[en:Dals-Ed Municipality]]
 [[fo:Dals-Eds kommuna]]
