--- a/Essunga_gielda.mw
+++ b/Essunga_gielda.mw
@@ -3,6 +3,8 @@
 
 {{Oarje-Götalándda leatna}}
 
+[[Category:Oarje-Götalándda leatna]]
+
 [[de:Essunga (Gemeinde)]]
 [[en:Essunga Municipality]]
 [[fo:Essunga kommuna]]
