--- a/Falköpinga_gielda.mw
+++ b/Falköpinga_gielda.mw
@@ -3,6 +3,8 @@
 
 {{Oarje-Götalándda leatna}}
 
+[[Category:Oarje-Götalándda leatna]]
+
 [[de:Falköping (Gemeinde)]]
 [[en:Falköping Municipality]]
 [[fo:Falköpings kommuna]]
