--- a/Färgelanda_gielda.mw
+++ b/Färgelanda_gielda.mw
@@ -3,6 +3,8 @@
 
 {{Oarje-Götalándda leatna}}
 
+[[Category:Oarje-Götalándda leatna]]
+
 [[de:Färgelanda (Gemeinde)]]
 [[en:Färgelanda Municipality]]
 [[eo:Färgelanda Kommun]]
