--- a/Grästorpa_gielda.mw
+++ b/Grästorpa_gielda.mw
@@ -3,6 +3,8 @@
 
 {{Oarje-Götalándda leatna}}
 
+[[Category:Oarje-Götalándda leatna]]
+
 [[de:Grästorp (Gemeinde)]]
 [[en:Grästorp Municipality]]
 [[fo:Grästorps kommuna]]
