--- a/Gullspånga_gielda.mw
+++ b/Gullspånga_gielda.mw
@@ -1,7 +1,9 @@
-[[Image:Gullspång Municipality in Västra Götaland County.png|right|200px]]
+[[Image:Gullspang Municipality in Västra Götaland County.png|right|200px]]
 '''Gullspånga gielda''' lea gielda [[Ruoŧŧa|Ruoŧas]] [[Oarje-Götalándda leatna|Oarje-Götalándda leanas]]. 
 
 {{Oarje-Götalándda leatna}}
+
+[[Category:Oarje-Götalándda leatna]]
 
 [[de:Gullspång (Gemeinde)]]
 [[en:Gullspång Municipality]]
