--- a/Göteborga_gielda.mw
+++ b/Göteborga_gielda.mw
@@ -3,6 +3,8 @@
 
 {{Oarje-Götalándda leatna}}
 
+[[Category:Oarje-Götalándda leatna]]
+
 [[de:Göteborg (Gemeinde)]]
 [[en:Gothenburg Municipality]]
 [[fo:Göteborgs kommuna]]
