--- a/Götene_gielda.mw
+++ b/Götene_gielda.mw
@@ -3,6 +3,8 @@
 
 {{Oarje-Götalándda leatna}}
 
+[[Category:Oarje-Götalándda leatna]]
+
 [[de:Götene (Gemeinde)]]
 [[en:Götene Municipality]]
 [[fo:Götene kommuna]]
