--- a/Herrljunga_gielda.mw
+++ b/Herrljunga_gielda.mw
@@ -3,6 +3,8 @@
 
 {{Oarje-Götalándda leatna}}
 
+[[Category:Oarje-Götalándda leatna]]
+
 [[de:Herrljunga (Gemeinde)]]
 [[en:Herrljunga Municipality]]
 [[fo:Herrljunga kommuna]]
