--- a/Hjo_gielda.mw
+++ b/Hjo_gielda.mw
@@ -3,6 +3,8 @@
 
 {{Oarje-Götalándda leatna}}
 
+[[Category:Oarje-Götalándda leatna]]
+
 [[de:Hjo (Gemeinde)]]
 [[en:Hjo Municipality]]
 [[fo:Hjo kommuna]]
