--- a/Härryda_gielda.mw
+++ b/Härryda_gielda.mw
@@ -3,6 +3,8 @@
 
 {{Oarje-Götalándda leatna}}
 
+[[Category:Oarje-Götalándda leatna]]
+
 [[de:Härryda (Gemeinde)]]
 [[en:Härryda Municipality]]
 [[fo:Härryda kommuna]]
