--- a/Trollhättana_gielda.mw
+++ b/Trollhättana_gielda.mw
@@ -2,3 +2,5 @@
 '''Trollhättana gielda''' lea gielda [[Ruoŧŧa|Ruoŧas]] [[Oarje-Götalándda leatna|Oarje-Götalándda leanas]]. 
 
 {{Oarje-Götalándda leatna}}
+
+[[Category:Oarje-Götalándda leatna]]
