--- a/Åmåla_gielda.mw
+++ b/Åmåla_gielda.mw
@@ -2,3 +2,5 @@
 '''Åmåla gielda''' lea gielda [[Ruoŧŧa|Ruoŧas]] [[Västra Götalándda leatna|Västra Götalándda leanas]]. 
 
 {{Västra Götalándda leatna}}
+
+[[Category:Oarje-Götalándda leatna]]
