--- a/Öckerö_gielda.mw
+++ b/Öckerö_gielda.mw
@@ -2,3 +2,5 @@
 '''Öckerö gielda''' lea gielda [[Ruoŧŧa|Ruoŧas]] [[Västra Götalándda leatna|Västra Götalándda leanas]]. 
 
 {{Västra Götalándda leatna}}
+
+[[Category:Oarje-Götalándda leatna]]
