--- a/Askersunda_gielda.mw
+++ b/Askersunda_gielda.mw
@@ -3,6 +3,8 @@
 
 {{Örebro leatna}}
 
+[[Category:Örebro leatna]]
+
 [[de:Askersund (Gemeinde)]]
 [[en:Askersund Municipality]]
 [[fo:Askersunds kommuna]]
