--- a/Degerforsa_gielda.mw
+++ b/Degerforsa_gielda.mw
@@ -3,6 +3,8 @@
 
 {{Örebro leatna}}
 
+[[Category:Örebro leatna]]
+
 [[da:Degerfors kommune]]
 [[de:Degerfors (Gemeinde)]]
 [[en:Degerfors Municipality]]
