--- a/Hälleforsa_gielda.mw
+++ b/Hälleforsa_gielda.mw
@@ -3,6 +3,8 @@
 
 {{Örebro leatna}}
 
+[[Category:Örebro leatna]]
+
 [[de:Hällefors (Gemeinde)]]
 [[en:Hällefors Municipality]]
 [[fo:Hällefors kommuna]]
