--- a/Karlskoga_gielda.mw
+++ b/Karlskoga_gielda.mw
@@ -2,3 +2,5 @@
 '''Karlskoga gielda''' lea gielda [[Ruoŧŧa|Ruoŧas]] [[Örebro leatna|Örebro leanas]].
 
 {{Örebro leatna}}
+
+[[Category:Örebro leatna]]
