--- a/Lekeberga_gielda.mw
+++ b/Lekeberga_gielda.mw
@@ -2,3 +2,5 @@
 '''Lekeberga gielda''' lea gielda [[Ruoŧŧa|Ruoŧas]] [[Örebro leatna|Örebro leanas]].
 
 {{Örebro leatna}}
+
+[[Category:Örebro leatna]]
