--- a/Ljusnarsberga_gielda.mw
+++ b/Ljusnarsberga_gielda.mw
@@ -2,3 +2,5 @@
 '''Ljusnarsberga gielda''' lea gielda [[Ruoŧŧa|Ruoŧas]] [[Örebro leatna|Örebro leanas]].
 
 {{Örebro leatna}}
+
+[[Category:Örebro leatna]]
