--- a/Örebro_gielda.mw
+++ b/Örebro_gielda.mw
@@ -2,3 +2,5 @@
 '''Örebro gielda''' lea gielda [[Ruoŧŧa|Ruoŧas]] [[Örebro leatna|Örebro leanas]].
 
 {{Örebro leatna}}
+
+[[Category:Örebro leatna]]
