--- a/Dalarna_leatna.mw
+++ b/Dalarna_leatna.mw
@@ -5,7 +5,7 @@
 {{Dalarna leana gielddat}}
 {{Ruoŧa leanat}}
  
-[[Category:Ruoŧŧa]]
+[[Category:Dalarna leatna]]
 
 [[bg:Даларна (лен)]]
 [[bs:Dalarnas län]]
