--- a/Lulli-Gárjila_eanangoddi.mw
+++ b/Lulli-Gárjila_eanangoddi.mw
@@ -1,4 +1,3 @@
-
 == Guovlugielddat ==
 
 * [[Imatra guovlugielda]]
@@ -6,3 +5,5 @@
 * [[Oarje-Saimaa guovlugielda]]
 
 {{Suoma eanangottit}}
+
+[[Category:Suoma eanangottit]]
