--- a/Lulli-Savo_eanangoddi.mw
+++ b/Lulli-Savo_eanangoddi.mw
@@ -28,6 +28,8 @@ geađgi =  |
 {{Lulli-Savo eanangotti guovlugielddat}}
 {{Suoma eanangottit}}
 
+[[Category:Suoma eanangottit]]
+
 [[de:Südsavo]]
 [[en:Southern Savonia]]
 [[eo:Suda Savonio]]
