--- a/Davvi-Pohjanmaa_eanangoddi.mw
+++ b/Davvi-Pohjanmaa_eanangoddi.mw
@@ -12,6 +12,8 @@
 
 {{Suoma eanangottit}}
 
+[[Category:Suoma eanangottit]]
+
 [[cs:Severní Pohjanmaa]]
 [[de:Nordösterbotten]]
 [[el:Βόρεια Οστροβόθνια (διοικητική περιφέρεια)]]
