--- a/Davvi-Savo_eanangoddi.mw
+++ b/Davvi-Savo_eanangoddi.mw
@@ -29,3 +29,7 @@ geađgi =  |
 
 {{Davvi-Savo eanangotti guovlugielddat}}
 {{Suoma eanangottit}}
+
+[[Category:Suoma eanangottit]]
+
+[[fi:Pohjois-Savon maakunta]]
