robot  legger til: [[sq:Heath Ledger]]

--- a/Heath_Ledger.mw
+++ b/Heath_Ledger.mw
@@ -53,6 +53,7 @@ fránskkagielat oahpaheaddji Sally Ledger Bell (r. Ramshaw) ja racerbiillavuoddj
 [[simple:Heath Ledger]]
 [[sk:Heath Ledger]]
 [[sl:Heath Ledger]]
+[[sq:Heath Ledger]]
 [[sr:Хит Леџер]]
 [[sv:Heath Ledger]]
 [[ta:ஹீத் லெட்ஜர்]]
