--- a/Leongiella.mw
+++ b/Leongiella.mw
@@ -33,25 +33,44 @@
 [[Category:Gielat]]
 [[Category:Indoeurohpálaš gielat]]
 [[Category:Románalaš gielat]]
-[[an:Luenga lionesa]]
-[[frp:Leonês]]
+{{Link FA|uk}}
+
+[[af:Leonees]]
+[[an:Luenga leyonesa]]
 [[ast:Llingua llionesa]]
 [[co:Lingua leonese]]
+[[da:Llionsk sprog]]
 [[de:Leonesische Sprache]]
+[[eml:Langua leonesa]]
+[[en:Leonese language]]
+[[eo:Leona lingvo]]
 [[es:Idioma leonés]]
 [[eu:Leonera]]
+[[ext:Luenga lionesa]]
+[[frp:Leonês]]
+[[fy:Llionsk]]
 [[gl:Lingua leonesa]]
-[[ko:레온어]]
+[[ia:Lingua leonese]]
+[[is:Leónska]]
 [[it:Lingua leonese]]
+[[ja:レオン語]]
+[[ko:레온어]]
+[[ksh:Leonesesh (Shprooch)]]
+[[kw:Leonek]]
 [[la:Lingua Legionica]]
+[[lb:Leonesesch Sprooch]]
+[[li:Léonees]]
 [[lij:Lengoa leonesa]]
+[[lmo:Lengua leunesa]]
+[[nds:Leonesche Spraak]]
 [[nl:Leonees]]
 [[no:Leonesisk]]
-[[pms:leonga leonese]]
 [[pt:Língua leonesa]]
-[[scn:Lingua liunesi]]
+[[ro:Limba leoneze]]
+[[simple:Leonese language]]
 [[sr:Леонски језик]]
+[[stq:Llionesisk]]
+[[tet:Lia-leaunés]]
 [[tr:Leonca]]
 [[vec:Łéngoa łeonéxe]]
-
-{{Link FA|uk}}
+[[vls:Llioans]]
