--- a/Ruotsinpyhtää.mw
+++ b/Ruotsinpyhtää.mw
@@ -1,6 +1,6 @@
 {{Gieldadieđut, Suopma
 | namma =  gielda
-| vearjogovva = [[Image:Ruotsinpyhtaacoa.jpg|120px]]
+| vearjogovva = [[Image:Ruotsinpyhtää.vaakuna.svg|120px]]
 | Kárta = [[Image:Location of Ruotsinpyhtaa in Finland.png|140px]]
 | leatna = [[Lulli-Suoma leatna]]
 | eanangoddi= [[Nuorta-Uusimaa eanangoddi|Nuorta-Uusimaa]]
