--- a/Geassemánnu.mw
+++ b/Geassemánnu.mw
@@ -4,6 +4,8 @@
 {{Mánotbadji}}
 [[Category:Mánotbajit]]
 
+[[pnt:Κερασινός]]
+
 [[af:Junie]]
 [[als:Juni]]
 [[an:Chunio]]
@@ -90,7 +92,7 @@
 [[lb:Juni]]
 [[li:Juni]]
 [[lij:Zûgno]]
-[[lmo:Zùgn]]
+[[lmo:Giügn]]
 [[ln:Sánzá ya motóbá]]
 [[lo:ມີຖຸນາ]]
 [[lt:Birželis]]
@@ -118,7 +120,6 @@
 [[os:Июнь]]
 [[pa:ਜੂਨ]]
 [[pl:Czerwiec]]
-[[pnt:Κερασινός]]
 [[pt:Junho]]
 [[qu:Inti raymi killa]]
 [[ro:Iunie]]
