The file [[:Image:Tunisia_coa.png]] has been removed, as it has been deleted by [[:commons:User:Shizhao]]: ''In category [[commons::category:Unknown as of 16 February 2009|Unknown as of 16 February 2009]]; no license''. ''[[m:User:CommonsDelinker|Tra

--- a/Tunisia.mw
+++ b/Tunisia.mw
@@ -3,7 +3,7 @@
 |-
 | style="background:#efefef;" align="center" colspan="2" |
 {| border="0" cellpadding="2" cellspacing="0"
-|[[Image:Flag of Tunisia.svg|130px]] [[Image:Tunisia_coa.png|130px]]
+|[[Image:Flag of Tunisia.svg|130px]] 
 |}
 |-
 | align="center" colspan=2 style="border-bottom:3px solid gray;" | <font size="-1">''Gonagaslašdajaldat:</font>
