robot  legger til: [[szl:Mołdawijo]]

--- a/Moldova.mw
+++ b/Moldova.mw
@@ -185,6 +185,7 @@ width="300px">
 [[sq:Moldavia]]
 [[sr:Молдавија]]
 [[sv:Moldavien]]
+[[szl:Mołdawijo]]
 [[ta:மல்டோவா]]
 [[tg:Молдова]]
 [[th:ประเทศมอลโดวา]]
