*Empty MediaWiki Message*

--- a/Jyväskylä.mw
+++ b/Jyväskylä.mw
@@ -8,7 +8,7 @@
 | vuođđudanjahki = 
 | hálddahusguovddáš =
 | viidodat = 
-| olmmošlohku = 
+| olmmošlohku = 128 000
 | olmmošlogujahki = 
 | giella = 
 | url = http://www..fi
