--- a/Eurovision_lávllagilvvohallan_2008.mw
+++ b/Eurovision_lávllagilvvohallan_2008.mw
@@ -19,6 +19,8 @@
 ]]
 -->
 
+[[Category:Eurovision lávllagilvohallan]]
+
 [[az:2008 Avroviziya Mahnı Müsabiqəsi]]
 [[bg:Евровизия 2008]]
 [[bs:Eurovision Song Contest 2008]]
