--- a/Eurovision_lávllagilvvohallan_1958.mw
+++ b/Eurovision_lávllagilvvohallan_1958.mw
@@ -1,5 +1,7 @@
 '''Eurovision 1958 lávllagilvvohallan''' ordnejuvvu [[Hilversum]]is, [[Vuolleeatnamat]]is. Gilvvohallama vuittii [[Frankriika]] ''André Claveau''.
 
+[[Category:Eurovision lávllagilvohallan]]
+
 [[de:Eurovision Song Contest 1958]]
 [[el:Διαγωνισμός Τραγουδιού Eurovision 1958]]
 [[en:Eurovision Song Contest 1958]]
