--- a/Eurovision_lávllagilvvohallan_1959.mw
+++ b/Eurovision_lávllagilvvohallan_1959.mw
@@ -1,5 +1,7 @@
 '''Eurovision lávllagilvvohallan 1959''' ordnejuvvu [[Cannes]]is, [[Frankriika]]s. Gilvvohallama vuittii [[Vuolleeatnamat]] ''Teddy Scholten''
 
+[[Category:Eurovision lávllagilvohallan]]
+
 [[da:Eurovision Song Contest 1959]]
 [[de:Eurovision Song Contest 1959]]
 [[en:Eurovision Song Contest 1959]]
