--- a/Eurovision_lávllagilvvohallan_1960.mw
+++ b/Eurovision_lávllagilvvohallan_1960.mw
@@ -1,5 +1,7 @@
 '''Eurovision lávllagilvvohallan 1960''' ordnejuvvu [[London]]is, [[Stuorra-Británnia]]s. Gilvvohallama vuittii Frankriika ''Jacqueline Boyer''.
 
+[[Category:Eurovision lávllagilvohallan]]
+
 [[az:1960 Avroviziya Mahnı Müsabiqəsi]]
 [[da:Eurovision Song Contest 1960]]
 [[de:Eurovision Song Contest 1960]]
