--- a/Eurovision_lávllagilvvohallan_1961.mw
+++ b/Eurovision_lávllagilvvohallan_1961.mw
@@ -1,5 +1,7 @@
 '''Eurovision lávllagilvvohallan 1961''' ordnejuvvu [[Cannes]]is, [[Frankriika]]s. Gilvvohallama vuittii [[Luxemburg]] ''Jean-Claude Pascal''.
 
+[[Category:Eurovision lávllagilvohallan]]
+
 [[az:1961 Avroviziya Mahnı Müsabiqəsi]]
 [[da:Eurovision Song Contest 1961]]
 [[de:Eurovision Song Contest 1961]]
