--- a/Eurovision_lávllagilvvohallan_1998.mw
+++ b/Eurovision_lávllagilvvohallan_1998.mw
@@ -1,5 +1,7 @@
 '''Eurovision lávllagilvvohallan 1998''' ordnejuvvu [[Birmingham]]is, [[Stuorra-Británnia]]s. Gilvvohallama vuittii [[Israel]] ''[[Dana International]]''.
 
+[[Category:Eurovision lávllagilvohallan]]
+
 [[az:1998 Avroviziya Mahnı Müsabiqəsi]]
 [[de:Eurovision Song Contest 1998]]
 [[en:Eurovision Song Contest 1998]]
