--- a/Eurovision_lávllagilvvohallan_1999.mw
+++ b/Eurovision_lávllagilvvohallan_1999.mw
@@ -1,5 +1,7 @@
 '''Eurovision lávllagilvvohallan 1999''' ordnejuvvu [[Jerusalem]]is, [[Israel]]is. Gilvvohallama vuittii [[Ruoŧŧa]] ''Charlotte Nilsson''.
 
+[[Category:Eurovision lávllagilvohallan]]
+
 [[az:1999 Avroviziya Mahnı Müsabiqəsi]]
 [[da:Eurovision Song Contest 1999]]
 [[de:Eurovision Song Contest 1999]]
