--- a/Eurovision_lávllagilvvohallan_2001.mw
+++ b/Eurovision_lávllagilvvohallan_2001.mw
@@ -1,5 +1,7 @@
 '''Eurovision lávllagilvvohallan 2001''' ordnejuvvu [[København]]is, [[Dánmárku]]s. Gilvvohallama vuittii [[Estlánda]] ''Tanel Padar'' ja ''Dave Benton''.
 
+[[Category:Eurovision lávllagilvohallan]]
+
 [[az:2001 Avroviziya Mahnı Müsabiqəsi]]
 [[da:Eurovision Song Contest 2001]]
 [[de:Eurovision Song Contest 2001]]
