--- a/Irlánda.mw
+++ b/Irlánda.mw
@@ -16,7 +16,7 @@
 |-
 | Presideanta || [[Mary McAleese]]
 |-
-| Oaiveministtar || [[Bertie Ahern]]
+| Oaiveministtar || [[Brian Cowen]]
 |-
 | [[Viidodat]]<br>&nbsp;- Oktibuot <br>&nbsp;- % čáhci || <br> 70,273 km² [[njealjehaskilomehter|km&sup2;]] <br> 
 |-
