*Empty MediaWiki Message*

--- a/Borlänge_gielda.mw
+++ b/Borlänge_gielda.mw
@@ -5,6 +5,7 @@
 
 [[Category:Dalarna leatna]]
 
+[[bg:Бурленге (община)]]
 [[de:Borlänge (Gemeinde)]]
 [[en:Borlänge Municipality]]
 [[fo:Borlänge kommuna]]
