*Empty MediaWiki Message*

--- a/Nárvvit.mw
+++ b/Nárvvit.mw
@@ -1,4 +1,4 @@
-Nárvvit leat lunddolaš oassi liikki boarásmuvvamis. Liiki šaddá asehut ja massá vehážiidda dávggasvuođas. Bajildussii ihtet danin seakkit dahje govddit nárvvit. Buohkat vásihit dan muhtin muddui, muhto čuvges liiki, mas lea unnan pigmeanta, nárvvaga eeanemusat. 
+Nárvvit leat lunddolaš oassi liikki boarásmuvvamis. Liiki šaddá asehut ja massá vehážiidda dávggasvuođas. Bajildussii ihtet danin seakkit dahje govddit nárvvit. Buohkat vásihit dan muhtin muddui, muhto čuvges liiki, mas lea unnan pigmeanta, nárvvaga eanemusat. 
 
 Min genehtalaš árbi váikkuha ollu dasa, man sakka mii nárvvagat. Čuvges liiki, mii ii buoril áfáiduva, nárvvaga eanet. Varrajohtu hedjona dattetge buohkain agi mielde, ja dan mielde liikái eai fievrášuva nu ollu biepmusávdnasat. Dan geažil liiki asehuvvá. 
 
