--- a/Nárvvit.mw
+++ b/Nárvvit.mw
@@ -3,3 +3,15 @@ Nárvvit leat lunddolaš oassi liikki boarásmuvvamis. Liiki šaddá asehut ja m
 Min genehtalaš árbi váikkuha ollu dasa, man sakka mii nárvvagat. Čuvges liiki, mii ii buoril áfáiduva, nárvvaga eanet. Varrajohtu hedjona dattetge buohkain agi mielde, ja dan mielde liikái eai fievrášuva nu ollu biepmusávdnasat. Dan geažil liiki asehuvvá. 
 
 Borgguheapmi bilida vissásit unna varrasuonažiid, mat bibmet liikki, ja dan geažil nárvvagitge borgguheaddjit johtileappot go sii geat eai borggut. Maiddái beaivváža suotnjarat jođálmahttet liikki boarásmuvvama. Sihke beaivváža UVA- ja UBA-suotnjarat rievdadahttet vuolleliikki, nu ahte liiki áiggi mielde asehuvvá. Nuba leatge beaivvášsuotnjarat nubbi stuorra ášši, mat váikkuhit dasa, man sakka olmmoš nárvvaga.
+
+
+[[en:Wrinkle (skin)]]
+[[es:Arruga]]
+[[fr:Ride (dermatologie)]]
+[[it:Ruga (dermatologia)]]
+[[he:קמטים]]
+[[no:Rynke]]
+[[ru:Морщины]]
+[[se:Nárvvit]]
+[[scn:Ruca]]
+[[sv:Rynka]]
