robot  endrer: [[vec:Becalegn vert]]

--- a/Ruonáčáihni.mw
+++ b/Ruonáčáihni.mw
@@ -29,5 +29,5 @@
 [[sk:Žlna zelená]]
 [[sv:Gröngöling]]
 [[tr:Yeşil ağaçkakan]]
-[[vec:Picus virdis]]
+[[vec:Becalegn vert]]
 [[wa:Vert betche-bos]]
