--- a/Peru.mw
+++ b/Peru.mw
@@ -199,7 +199,7 @@ Perus leat 25 guovllu ({{g-es|región}}) ja okta leatna ({{g-es|provincia}}). Ju
 [[ur:پیرو]]
 [[uz:Peru]]
 [[vec:Perù]]
-[[vi:Peru]]
+[[vi:Perú]]
 [[vo:Peruvän]]
 [[wo:Peru]]
 [[wuu:秘鲁]]
