[[Amerihká ovttastuvvan stáhtat|Amerihká ovttastuvvan stáhtaid]]

--- a/USA_dollár.mw
+++ b/USA_dollár.mw
@@ -1,6 +1,6 @@
 [[Image:Usdollar100front.jpg|thumb|250px|$100 dollára]]
 
-'''USA dollár''' (USD, {{g-en|dollar}}) lea [[Amerihká ovttastuvvan stáhtaid]] ruhtaovttadat. Dollára symbola lea '''$'''.
+'''USA dollár''' (USD, {{g-en|dollar}}) lea [[Amerihká ovttastuvvan stáhtat|Amerihká ovttastuvvan stáhtaid]] ruhtaovttadat. Dollára symbola lea '''$'''.
 
 [[als:US-Dollar]]
 [[an:Dólar estatounitense]]
