robot  legger til: [[ar:روبرت فروست]]

--- a/Robert_Frost.mw
+++ b/Robert_Frost.mw
@@ -20,6 +20,7 @@ Jagis [[1890]] Frost vázzigo&#0273;ii Lawrence-joatkkaskuvlla, mis son movttás
 
 [[Category:Amerihkálaš diktačállit|Frost, Robert]]
 
+[[ar:روبرت فروست]]
 [[bg:Робърт Фрост]]
 [[ca:Robert Frost]]
 [[de:Robert Frost]]
