robot  legger til: [[kv:Намыр]]

--- a/Veaddemuorji.mw
+++ b/Veaddemuorji.mw
@@ -7,6 +7,7 @@
 [[fr:Rubus saxatilis]]
 [[hsb:Skalny ćernjowc]]
 [[is:Hrútaberjalyng]]
+[[kv:Намыр]]
 [[lt:Paprastoji katuogė]]
 [[nl:Steenbraam]]
 [[pl:Malina kamionka]]
