--- a/Peking.mw
+++ b/Peking.mw
@@ -1,6 +1,8 @@
-[[Image:China Beijing.svg|right|250px]]
+[[File:China Beijing.svg|right|250px]]
 
 '''Peking''' (kiinnágillii 北京 ''Běijīng shì'') lea [[Kiinná]] oaivegávpot.
+
+[[Category:Ásia oaivegávpogat]]
 
 [[af:Beijing]]
 [[am:ቤዪጂንግ]]
