*Empty MediaWiki Message*

--- a/Eurovision_lávllagilvvohallan.mw
+++ b/Eurovision_lávllagilvvohallan.mw
@@ -1,5 +1,6 @@
 '''Eurovision lávllagilvohallan'''
 
+{{Commons|Category:Eurovision}}
 [[Category:Eurovision lávllagilvohallan]]
 
 [[ar:مسابقة يوروفيجن للأغاني]]
