--- a/Nurmes.mw
+++ b/Nurmes.mw
@@ -1,7 +1,7 @@
 {{Gieldadieđut, Suopma
 | namma = Nurmes gávpot
-| vearjogovva = [[Image:Nurmes coa.gif|100px|vearjogovva]]
-| Kárta = [[Image:Nurmes-location.png|140px|sajádat]]
+| vearjogovva = [[Image:Nurmes.vaakuna.svg|100px|vearjogovva]]
+| Kárta = [[Image:Nurmes.sijainti.suomi.2008.svg|140px|sajádat]]
 | leatna = [[Nuorta-Suoma leatna]]
 | eanangoddi= [[Davvi-Gárjila eanangoddi|Davvi-Gárjil]]
 | guovlugielda = [[Pielis-Gárjila guovlugielda]]
