--- a/Narttit.mw
+++ b/Narttit.mw
@@ -26,7 +26,7 @@
 [[fi:Rikot]]
 [[fr:Saxifrage]]
 [[he:בקעצור]]
-[[hsb:Baworski rupik]]
+[[hsb:Rupik]]
 [[lt:Uolaskėlė]]
 [[nl:Steenbreek]]
 [[no:Sildrer]]
