robot  legger til: [[ru:Тимьян ползучий]]

--- a/Deanutimjan.mw
+++ b/Deanutimjan.mw
@@ -19,6 +19,7 @@
 [[lv:Mazais mārsils]]
 [[nl:Kleine tijm]]
 [[pl:Macierzanka piaskowa]]
+[[ru:Тимьян ползучий]]
 [[sv:Backtimjan]]
 [[uk:Чебрець звичайний]]
 [[wa:Såvaedje pilé]]
