robot  legger til: [[lij:Scistema Solare]]

--- a/Beaivvášgoddi.mw
+++ b/Beaivvášgoddi.mw
@@ -72,6 +72,7 @@ Beaivvášgottis lea [[Beaivváš]], 8 [[planehta]] ja su 165 [[mánnu|mánu]] s
 [[la:Systema solare]]
 [[lb:Sonnesystem]]
 [[li:Zonnestèlsel]]
+[[lij:Scistema Solare]]
 [[lt:Saulės sistema]]
 [[lv:Saules sistēma]]
 [[mk:Сончев систем]]
