svg vearjogovva, kárta

--- a/Isokyrö.mw
+++ b/Isokyrö.mw
@@ -1,7 +1,7 @@
 {{Gieldadieđut, Suopma
 | namma = Isokyrö gielda
-| vearjogovva = 
-| Kárta = 
+| vearjogovva = [[Image:Isokyrö.vaakuna.svg|100px]]
+| Kárta = [[Image:Isokyrö.sijainti.suomi.2008.svg|140px]]
 | leatna = [[Oarje-Suoma leatna]]
 | eanangoddi= [[Pohjanmaa eanangoddi]]
 | guovlugielda = [[Kyrönmaa guovlugielda]]
