svg vearjogovva, kárta

--- a/Joroinen.mw
+++ b/Joroinen.mw
@@ -1,7 +1,7 @@
 {{Gieldadieđut, Suopma
 | namma = Joroinen gielda
-| vearjogovva = [[Image:Joroinen vaakuna.png|100px|vearjogovva]]
-| Kárta = [[Image:Location of Joroinen in Finland.png|140px|sajádat]]
+| vearjogovva = [[Image:Joroinen.vaakuna.svg|100px|vearjogovva]]
+| Kárta = [[Image:Joroinen.sijainti.suomi.2008.svg|140px|sajádat]]
 | leatna = [[Nuorta-Suoma leatna]]
 | eanangoddi= [[Lulli-Savo eanangoddi|Lulli-Savo]]
 | guovlugielda = [[Juva guovlugielda]]
