*Empty MediaWiki Message*

--- a/Mari_dásseváldi.mw
+++ b/Mari_dásseváldi.mw
@@ -1,5 +1,7 @@
 '''Mari dásseváldi''', lea oassi [[Ruošša]]s. Dan oaivegavpot lea [[Joškar-Ola|Joškar-Ola]]. Mari dásseváldi lea Gaska-Ruosas, Volga gáttis.
 
+{{commons|Category:Mari El}}
+
 [[af:Mari El]]
 [[ar:جمهورية ماري]]
 [[be:Марый Эл]]
