--- a/Roavvenjárga.mw
+++ b/Roavvenjárga.mw
@@ -20,7 +20,7 @@
 [[Roavvenjárgga dálongielda|Roavvenjárgga dálongielddain]] jagi [[2006]] álggus ovttastuvván Roavvenjága lea olmmošlogu dáfus Suoma 12. stuorámus gávpot ja [[Eurohpá]] stuorámus gávpot viidodaga ektui.
 <ref>http://www.rovaniemi.fi/?deptid=14931</ref>.
 
-Ovddes Roavvnjágga gávpot, dálá Roavvenjárgga guovddáš lea [[Ovnnesjohka|Ovnnesjoga]] ja [[Giemajohka|Giemajoga]] deaivvadanbáikkis.
+Ovddes Roavvenjágga gávpot, mii lea dálá Roavvenjárgga gávpoga guovddáš, lea [[Ovnnesjohka|Ovnnesjoga]] ja [[Giemajohka|Giemajoga]] deaivvadanbáikkis.
 
 {{Lappi leana gielddat}}
 [[Category:Lappi leana gielddat]]
