*Empty MediaWiki Message*

--- a/The_BlackSheeps.mw
+++ b/The_BlackSheeps.mw
@@ -1,11 +1,11 @@
 [[File:BlackSheeps 2009.jpg|thumb|upright=1.3|The BlackSheeps (2009)]]
-'''The BlackSheeps''' lea [[Unjárga|unjárggalaš]] rockjoavku, mii vuittii [[MGP Nordic]]-lávlagilvvohallama jagis 2008. 
+'''The BlackSheeps''' lea [[Unjárga|unjárggalaš]] rockjoavku, mii vuittii [[MGP Nordic]]-lávlagilvvohallama jagis 2008 lávlagiin Oro jaska beana. 
 
 ==Joavku==
-* Agnete Kristin Johnsen - lávlu
-* Alexander Touryguin - bássa
-* Viktoria Eriksen - trumbbut
-* Emelie Nilsen - gitárra
+* Agnete Kristin Johnsen (r. 1994) - lávlu
+* Alexander Touryguin (r. 1993) - bássa
+* Viktoria Eriksen (r. 1993) - trumbbut
+* Emelie Nilsen (r. 1993) - gitárra
 
 ==Geahča maid==
 * [http://web3.custompublish.com/getfile.php/523188.743.edatrtbyxy/Bladet+nr+1+2007.pdf?return=www.nesseby.kommune.no Unjárgga bláđđi]
