--- a/Sámit.mw
+++ b/Sámit.mw
@@ -20,7 +20,7 @@ Sámiid álbmotbeaivi lea [[guovvamánu 6.]] beaivve. Guovvamánu 6. beaivi avvu
 == Álgoálbmot státus ==
 
 == Liŋkkat ==
-
+<references/>
 [[Category:Sápmi]]
 
 {{Link FA|uk}}
