*Empty MediaWiki Message*

--- a/Sildi.mw
+++ b/Sildi.mw
@@ -1,6 +1,6 @@
-[[Image:Herringadultkils.jpg||thumb|right|250px|Sildi]]
-'''Sildi''' (Clupea harengus) lea guolli.
-[[Image:Heringsschwarm.gif|thumb|right|Sildioaiváldat]]<br clear=right/>
+[[Image:Herringadultkils.jpg||thumb|right|250px|Sildi - Sallit]]
+'''Sildi''' dahje maiddái gohčoduvvon '''sallit''' (Clupea harengus) lea mearaguolli mii vuodjá spierrun.
+[[Image:Heringsschwarm.gif|thumb|right|Sildioaiváldat - Sallitspierru]]<br clear=right/>
 
 [[Category:Guolit]]
 
