--- a/Guovdageaidnu.mw
+++ b/Guovdageaidnu.mw
@@ -18,7 +18,9 @@
 
 '''Guovdageaidnu''' ([[dárogiella|dárogillii]] ''Kautokeino'') lea suohkan Sis-[[Finnmárku|Finnmárkkus]]. Guovdageaidnu lea viidodaga ektui Norgga stuorámus suohkan. Guovdageainnu rádjegielddat leat [[Návuotna]] ja [[Áltá]] davvin, [[Kárášjohka]] nuortin, [[Ráisa]] oarjin ja [[Suopma|Suoma]] bealde [[Eanodat]] lullin.
 
-[[Image:Nieidagorsi.jpg|thumb|left|Nieidagorši Guovdageain-eanus]] 
+Guovdageaidnu gullá 2009 Sámedikkeválggaid rájes Ávjovári válgabiirii. Dohko gullet maid Kárášjoga gielda ja Porsáŋggu gielda. Ovdal 2009 lea Guovdageaidnu leamaš sierra válgabiire.
+
+[[Image:Nieidagorsi.jpg|thumb|left|Nieidagorži Guovdageain-eanus]] 
 Jagi 2006 álggus olmmošlohku lei 2998 olbmo. Badjel 2000 olbmo ássa Guovdageainnus (márkanis). [[Máze]]s gaskal Guovdageainnu ja [[Álttá]] ássa lagabui 400 olbmo. Suohkana ássiin sullii 90 % leat sámegielagat.
 
 Guovdageainnus doaibmá ee. [[Beaivváš Sámi Teáhter]], [[Sámi allaskuvla]], [[Sámi Instituhtta]], Sámi joatkkaskuvla ja boazodoalloskuvla ([[dárogiella|dárogillii]] Samisk videregående skole og reindriftsskole).
