--- a/Ođđajagimánu_10..mw
+++ b/Ođđajagimánu_10..mw
@@ -113,6 +113,7 @@
 [[nrm:10 Janvyi]]
 [[oc:10 de genièr]]
 [[os:10 январы]]
+[[pa:੧੦ ਜਨਵਰੀ]]
 [[pam:Eneru 10]]
 [[pl:10 stycznia]]
 [[pt:10 de janeiro]]
