--- a/Lulli-Korea.mw
+++ b/Lulli-Korea.mw
@@ -18,9 +18,9 @@
 |-
 | [[Oaivegávpot]] || [[Seoul]]
 |-
-| [[Mátta-Korea presideanta|Presideanta]] || [[Roh Moo-hyun]]
+| [[Mátta-Korea presideanta|Presideanta]] || [[Lee Myung-bak]]
 |-
-| [[Mátta-Korea oaiveministtar|Oaiveministtar]] || [[Lee Hae-chan]]
+| [[Mátta-Korea oaiveministtar|Oaiveministtar]] || [[Han Seung-soo]]
 |-
 | [[Viidodat]]<br>&nbsp;- Oktibuot <br>&nbsp;- % čáhci || <br> 99,274 [[njealjehaskilomehter|km&sup2;]] <br> 0.3%
 |-
