robot  legger til: [[ee:Albania]]

--- a/Albánia.mw
+++ b/Albánia.mw
@@ -52,6 +52,7 @@ Ruhta: [[Lek]]<BR>
 [[de:Albanien]]
 [[diq:Arnawutiye]]
 [[dsb:Albańska]]
+[[ee:Albania]]
 [[el:Αλβανία]]
 [[en:Albania]]
 [[eo:Albanio]]
