robot  endrer: [[lmo:Algeria]], [[nah:Argelia]]

--- a/Algeria.mw
+++ b/Algeria.mw
@@ -90,7 +90,7 @@ Ruhta: <BR>
 [[lb:Algerien]]
 [[li:Algerieë]]
 [[lij:Algeïa]]
-[[lmo:Algèria]]
+[[lmo:Algeria]]
 [[ln:Aljeria]]
 [[lt:Alžyras]]
 [[lv:Alžīrija]]
@@ -100,7 +100,7 @@ Ruhta: <BR>
 [[ms:Algeria]]
 [[mzn:الجزایر]]
 [[na:Algeria]]
-[[nah:Arxellān]]
+[[nah:Argelia]]
 [[nds:Algerien]]
 [[nl:Algerije]]
 [[nn:Algerie]]
