robot  legger til: [[ee:Andorra]]

--- a/Andorra.mw
+++ b/Andorra.mw
@@ -73,6 +73,7 @@ Andorras leat čieža suohkana. Árbevirolaččat riikkas leat guhtta hálddahus
 [[diq:Andorra]]
 [[dsb:Andorra]]
 [[dv:އެންޑޯރާ]]
+[[ee:Andorra]]
 [[el:Ανδόρρα]]
 [[en:Andorra]]
 [[eo:Andoro]]
