--- a/Arábagiella.mw
+++ b/Arábagiella.mw
@@ -65,7 +65,7 @@
 [[et:Araabia keel]]
 [[eu:Arabiera]]
 [[ext:Luenga árabi]]
-[[fa:زبان عربی]]
+[[fa:زبان تازی]]
 [[fi:Arabian kieli]]
 [[fo:Arabiskt (mál)]]
 [[fr:Arabe (langue)]]
