--- a/The_BlackSheeps.mw
+++ b/The_BlackSheeps.mw
@@ -1,4 +1,4 @@
-[[File:BlackSheeps 2009.jpg|thumb|upright=1.3|The BlackSheeps (2009)]]
+[[File:BlackSheeps.jpg|thumb|upright=1.3|The BlackSheeps (2009)]]
 '''The BlackSheeps''' lea [[Unjárga|unjárggalaš]] rockjoavku, mii vuittii [[MGP Nordic]]-lávlagilvvohallama jagis 2008 lávlagiin Oro jaska beana. 
 
 ==Joavku==
