--- a/Juovlamánu_1..mw
+++ b/Juovlamánu_1..mw
@@ -113,6 +113,7 @@
 [[pt:1 de dezembro]]
 [[ro:1 decembrie]]
 [[ru:1 декабря]]
+[[sah:Ахсынньы 1]]
 [[scn:1 di dicèmmiru]]
 [[sco:1 December]]
 [[sh:1.12.]]
