--- a/Juovlamánu_10..mw
+++ b/Juovlamánu_10..mw
@@ -119,6 +119,7 @@
 [[pt:10 de dezembro]]
 [[ro:10 decembrie]]
 [[ru:10 декабря]]
+[[sah:Ахсынньы 10]]
 [[scn:10 di dicèmmiru]]
 [[sco:10 December]]
 [[sh:10.12.]]
