--- a/Juovlamánu_12..mw
+++ b/Juovlamánu_12..mw
@@ -120,6 +120,7 @@
 [[pt:12 de dezembro]]
 [[ro:12 decembrie]]
 [[ru:12 декабря]]
+[[sah:Ахсынньы 12]]
 [[scn:12 di dicèmmiru]]
 [[sco:12 December]]
 [[sh:12.12.]]
