robot  legger til: [[sah:Ахсынньы 11]]

--- a/Juovlamánu_11..mw
+++ b/Juovlamánu_11..mw
@@ -119,6 +119,7 @@
 [[pt:11 de dezembro]]
 [[ro:11 decembrie]]
 [[ru:11 декабря]]
+[[sah:Ахсынньы 11]]
 [[scn:11 di dicèmmiru]]
 [[sco:11 December]]
 [[sh:11.12.]]
