--- a/Juovlamánu_14..mw
+++ b/Juovlamánu_14..mw
@@ -120,6 +120,7 @@
 [[pt:14 de dezembro]]
 [[ro:14 decembrie]]
 [[ru:14 декабря]]
+[[sah:Ахсынньы 14]]
 [[scn:14 di dicèmmiru]]
 [[sco:14 December]]
 [[sh:14.12.]]
