--- a/Juovlamánu_17..mw
+++ b/Juovlamánu_17..mw
@@ -116,6 +116,7 @@
 [[pt:17 de dezembro]]
 [[ro:17 decembrie]]
 [[ru:17 декабря]]
+[[sah:Ахсынньы 17]]
 [[scn:17 di dicèmmiru]]
 [[sco:17 December]]
 [[sh:17.12.]]
