--- a/Juovlamánu_16..mw
+++ b/Juovlamánu_16..mw
@@ -127,6 +127,7 @@
 [[pt:16 de dezembro]]
 [[ro:16 decembrie]]
 [[ru:16 декабря]]
+[[sah:Ахсынньы 16]]
 [[scn:16 di dicèmmiru]]
 [[sco:16 December]]
 [[sh:16.12.]]
