--- a/Juovlamánu_19..mw
+++ b/Juovlamánu_19..mw
@@ -114,6 +114,7 @@
 [[pt:19 de dezembro]]
 [[ro:19 decembrie]]
 [[ru:19 декабря]]
+[[sah:Ахсынньы 19]]
 [[scn:19 di dicèmmiru]]
 [[sco:19 December]]
 [[sh:19.12.]]
