--- a/Juovlamánu_20..mw
+++ b/Juovlamánu_20..mw
@@ -113,6 +113,7 @@
 [[pt:20 de dezembro]]
 [[ro:20 decembrie]]
 [[ru:20 декабря]]
+[[sah:Ахсынньы 20]]
 [[scn:20 di dicèmmiru]]
 [[sco:20 December]]
 [[sh:20.12.]]
