--- a/Juovlamánu_23..mw
+++ b/Juovlamánu_23..mw
@@ -112,6 +112,7 @@
 [[pt:23 de dezembro]]
 [[ro:23 decembrie]]
 [[ru:23 декабря]]
+[[sah:Ахсынньы 23]]
 [[scn:23 di dicèmmiru]]
 [[sco:23 December]]
 [[sh:23.12.]]
