--- a/Juovlamánu_26..mw
+++ b/Juovlamánu_26..mw
@@ -118,6 +118,7 @@
 [[pt:26 de dezembro]]
 [[ro:26 decembrie]]
 [[ru:26 декабря]]
+[[sah:Ахсынньы 26]]
 [[scn:26 di dicèmmiru]]
 [[sco:26 December]]
 [[sh:26.12.]]
