robot  legger til: [[sah:Ахсынньы 6]]

--- a/Juovlamánu_6..mw
+++ b/Juovlamánu_6..mw
@@ -112,6 +112,7 @@
 [[pt:6 de dezembro]]
 [[ro:6 decembrie]]
 [[ru:6 декабря]]
+[[sah:Ахсынньы 6]]
 [[scn:6 di dicèmmiru]]
 [[sco:6 December]]
 [[sh:6.12.]]
