robot  legger til: [[sah:Ахсынньы 7]]

--- a/Juovlamánu_7..mw
+++ b/Juovlamánu_7..mw
@@ -110,6 +110,7 @@
 [[pt:7 de dezembro]]
 [[ro:7 decembrie]]
 [[ru:7 декабря]]
+[[sah:Ахсынньы 7]]
 [[scn:7 di dicèmmiru]]
 [[sco:7 December]]
 [[sh:7.12.]]
