robot  legger til: [[sah:Ахсынньы 8]]

--- a/Juovlamánu_8..mw
+++ b/Juovlamánu_8..mw
@@ -113,6 +113,7 @@
 [[pt:8 de dezembro]]
 [[ro:8 decembrie]]
 [[ru:8 декабря]]
+[[sah:Ахсынньы 8]]
 [[scn:8 di dicèmmiru]]
 [[sco:8 December]]
 [[sh:8.12.]]
