--- a/Juovlamánu_9..mw
+++ b/Juovlamánu_9..mw
@@ -119,6 +119,7 @@
 [[pt:9 de dezembro]]
 [[ro:9 decembrie]]
 [[ru:9 декабря]]
+[[sah:Ахсынньы 9]]
 [[scn:9 di dicèmmiru]]
 [[sco:9 December]]
 [[sh:9.12.]]
