robot  endrer: [[si:භාරත් ජනරජය]]

--- a/India.mw
+++ b/India.mw
@@ -175,7 +175,7 @@ Ruhta: [[Rupia]]<BR>
 [[scn:Innia]]
 [[sco:Indie]]
 [[sh:Indija]]
-[[si:ඉන්දියාව]]
+[[si:භාරත් ජනරජය]]
 [[simple:India]]
 [[sk:India]]
 [[sl:Indija]]
