--- a/Kypros.mw
+++ b/Kypros.mw
@@ -47,6 +47,7 @@ Ruhta: Kypros buddi<BR>
 [[de:Republik Zypern]]
 [[diq:Qıbrıs]]
 [[dsb:Cypern]]
+[[ee:Cyprus]]
 [[el:Κύπρος]]
 [[en:Cyprus]]
 [[eo:Respubliko Kipro]]
