--- a/Látvia.mw
+++ b/Látvia.mw
@@ -170,7 +170,7 @@ width="300px">
 [[ms:Latvia]]
 [[mt:Latvja]]
 [[na:Latwia]]
-[[nah:Letontlān]]
+[[nah:Letonia]]
 [[nds:Lettland]]
 [[nds-nl:Letlaand]]
 [[ne:लात्भिया]]
