--- a/Niger.mw
+++ b/Niger.mw
@@ -82,7 +82,7 @@
 [[ml:നീഷര്‍]]
 [[mr:नायजर]]
 [[ms:Niger]]
-[[nah:Nixer]]
+[[nah:Niger]]
 [[nds:Republik Niger]]
 [[nl:Niger (land)]]
 [[nn:Niger]]
