--- a/Guovvamánu_24..mw
+++ b/Guovvamánu_24..mw
@@ -114,6 +114,7 @@
 [[pt:24 de fevereiro]]
 [[ro:24 februarie]]
 [[ru:24 февраля]]
+[[sah:Олунньу 24]]
 [[scn:24 di frivaru]]
 [[sco:24 Februar]]
 [[simple:February 24]]
