--- a/Portugal.mw
+++ b/Portugal.mw
@@ -55,6 +55,7 @@ Ruhta: [[Euro]] <BR>
 [[dsb:Portugalska]]
 [[dv:ޕޯޗުގަލް]]
 [[dz:པོར་ཅུ་གལ་]]
+[[ee:Portugal]]
 [[el:Πορτογαλία]]
 [[en:Portugal]]
 [[eo:Portugalio]]
