--- a/Aotearoa.mw
+++ b/Aotearoa.mw
@@ -112,6 +112,7 @@
 [[ro:Noua Zeelandă]]
 [[ru:Новая Зеландия]]
 [[sa:न्यू-जीलैंड]]
+[[sah:Саҥа Зеландия]]
 [[scn:Nova Zilanna]]
 [[sco:New Zealand]]
 [[sh:Novi Zeland]]
