robot  endrer: [[nah:Rusitlālpan]]

--- a/Ruošša.mw
+++ b/Ruošša.mw
@@ -130,7 +130,7 @@ Ruhta: Ruppal<BR>
 [[mt:Russja]]
 [[myv:Россия Мастор]]
 [[na:Russia]]
-[[nah:Rusia]]
+[[nah:Rusitlālpan]]
 [[nds:Russland]]
 [[nds-nl:Ruslaand]]
 [[ne:रसिया]]
