robot  endrer: [[nah:Arxellān]]

--- a/Algeria.mw
+++ b/Algeria.mw
@@ -100,7 +100,7 @@ Ruhta: <BR>
 [[ms:Algeria]]
 [[mzn:الجزایر]]
 [[na:Algeria]]
-[[nah:Argelia]]
+[[nah:Arxellān]]
 [[nds:Algerien]]
 [[nl:Algerije]]
 [[nn:Algerie]]
