--- a/Antoine_de_Saint-Exupéry.mw
+++ b/Antoine_de_Saint-Exupéry.mw
@@ -45,7 +45,7 @@
 [[pt:Antoine de Saint-Exupéry]]
 [[qu:Antoine de Saint-Exupéry]]
 [[ro:Antoine de Saint-Exupéry]]
-[[ru:Де Сент-Экзюпери, Антуан]]
+[[ru:Сент-Экзюпери, Антуан де]]
 [[sh:Antoine de Saint-Exupéry]]
 [[sk:Antoine de Saint-Exupéry]]
 [[sl:Antoine de Saint-Exupéry]]
