--- a/Lohja.mw
+++ b/Lohja.mw
@@ -1,7 +1,7 @@
 {{Gieldadieđut, Suopma
 | namma =  gielda
-| vearjogovva = [[Image:Lohja.gif|120px]]
-| Kárta = [[Image:Location of Lohja in Finland.png|140px]]
+| vearjogovva = [[Image:Lohja.vaakuna.svg|120px]]
+| Kárta = [[Image:Lohja.sijainti.suomi.2009.svg|140px]]
 | leatna = [[Lulli-Suoma leatna]]
 | eanangoddi= [[Uusimaa eanangoddi]]
 | guovlugielda = [[Lohja guovlugielda]]
