--- a/Lohja_guovlogielda.mw
+++ b/Lohja_guovlogielda.mw
@@ -3,7 +3,7 @@
 == Gielddat ==
 * [[Image:Karjalohja.vaakuna.svg|23px]] [[Karjalohja]] (Gielda)
 * [[Image:Karkkila.vaakuna.svg|23px]] [[Karkkila]] (Gávpot)
-* [[Image:Lohja.gif|23px]] [[Lohja]] (Gávpot)
+* [[Image:Lohja.vaakuna.svg|23px]] [[Lohja]] (Gávpot)
 * [[Image:Nummi-Pusula.vaakuna.svg|23px]] [[Nummi-Pusula]] (Gielda)
 * [[Image:Sammatticoa.jpg|23px]] [[Sammatti]] (Gielda)
 * [[Image:Vihti.vaakuna.svg|23px]] [[Vihti]] (Gielda)
