robot  legger til: [[qu:Arminya simi]]

--- a/Armeniagiella.mw
+++ b/Armeniagiella.mw
@@ -59,6 +59,7 @@
 [[os:Сомихаг æвзаг]]
 [[pl:Język ormiański]]
 [[pt:Língua arménia]]
+[[qu:Arminya simi]]
 [[ro:Limba armeană]]
 [[ru:Армянский язык]]
 [[sco:Armenie leid]]
