robot  legger til: [[csb:Kôłp sniegùlc]]

--- a/Boallonjukča.mw
+++ b/Boallonjukča.mw
@@ -12,6 +12,7 @@
 [[bg:Ням лебед]]
 [[ca:Cigne mut]]
 [[cs:Labuť velká]]
+[[csb:Kôłp sniegùlc]]
 [[cy:Alarch Dof]]
 [[da:Knopsvane]]
 [[de:Höckerschwan]]
