robot  legger til: [[oc:Devanagari]]

--- a/Devanagari.mw
+++ b/Devanagari.mw
@@ -35,6 +35,7 @@
 [[nl:Devanagari]]
 [[nn:Devanagari]]
 [[no:Devanagari]]
+[[oc:Devanagari]]
 [[pl:Pismo dewanagari]]
 [[pt:Devanágari]]
 [[qu:Diwanaqri siq'i llumpa]]
