--- a/Cuoŋománu_1..mw
+++ b/Cuoŋománu_1..mw
@@ -62,6 +62,7 @@
 [[ast:1 d'abril]]
 [[az:1 aprel]]
 [[bat-smg:Balondė 1]]
+[[bcl:Abril 1]]
 [[be:1 красавіка]]
 [[be-x-old:1 красавіка]]
 [[bg:1 април]]
@@ -142,6 +143,7 @@
 [[oc:1èr d'abril]]
 [[pam:Abril 1]]
 [[pl:1 kwietnia]]
+[[pnt:1 Απρίλτ]]
 [[pt:1 de abril]]
 [[ro:1 aprilie]]
 [[ru:1 апреля]]
@@ -161,6 +163,7 @@
 [[te:ఏప్రిల్ 1]]
 [[tg:1 апрел]]
 [[th:1 เมษายน]]
+[[tk:1 aprel]]
 [[tl:Abril 1]]
 [[tr:1 Nisan]]
 [[tt:1. Äpril]]
