--- a/Juovlamánnu.mw
+++ b/Juovlamánnu.mw
@@ -4,8 +4,6 @@
 {{Mánotbadji}}
 [[Category:Mánotbajit]]
 
-[[pnt:Χριστουγεννάρτς]]
-
 [[af:Desember]]
 [[als:Dezember]]
 [[am:ዲሴምበር]]
@@ -123,6 +121,7 @@
 [[pa:ਦਸੰਬਰ]]
 [[pam:Disiembri]]
 [[pl:Grudzień]]
+[[pnt:Χριστουγεννάρτς]]
 [[pt:Dezembro]]
 [[qu:Qhapaq raymi killa]]
 [[ro:Decembrie]]
@@ -147,7 +146,7 @@
 [[te:డిసెంబర్]]
 [[tg:Декабр]]
 [[th:ธันวาคม]]
-[[tk:Dekabr aýy]]
+[[tk:Dekabr]]
 [[tl:Disyembre]]
 [[tpi:Disemba]]
 [[tr:Aralık]]
