robot  legger til: [[cv:Кĕтмел]]

--- a/Jokŋa.mw
+++ b/Jokŋa.mw
@@ -13,6 +13,7 @@
 [[be-x-old:Брусьніцы]]
 [[bg:Червена боровинка]]
 [[bs:Brusnica]]
+[[cv:Кĕтмел]]
 [[da:Tyttebær]]
 [[de:Preiselbeere]]
 [[en:Vaccinium vitis-idaea]]
