robot  endrer: [[tr:Bahamalar]]

--- a/Bahama.mw
+++ b/Bahama.mw
@@ -112,7 +112,7 @@
 [[th:ประเทศบาฮามาส]]
 [[tk:Bagama Adalary]]
 [[tl:Bahamas]]
-[[tr:Bahama Adaları]]
+[[tr:Bahamalar]]
 [[ug:Bahama]]
 [[uk:Багамські Острови]]
 [[uz:Bagamalar]]
